# python-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
src/aios_cofounder_mcp/: approvals.py  audit.py  main.py  oauth_routes.py  server.py  settings.py
src/aios_cofounder_mcp/assistant/: models.py  service.py
src/aios_cofounder_mcp/google/: calendar.py  contacts.py  gmail.py  oauth.py
src/aios_cofounder_mcp/prompts/: email_followup.py  inbox_triage.py  meeting_prep.py  weekly_review.py
src/aios_cofounder_mcp/resources/: calendar_resources.py  gmail_resources.py  state_resources.py
src/aios_cofounder_mcp/storage/: db.py  migrations.sql  repo.py
src/aios_cofounder_mcp/tools/: __init__.py  approval_tools.py  assistant_tools.py  auth_tools.py  calendar_tools.py  contacts_tools.py  gmail_tools.py  web_tools.py
src/aios_cofounder_mcp/web/: fetch.py  search.py
tests/: test_smoke_tools.py  test_storage_migrations.py
