[project]
name = "aios-cofounder-mcp"
version = "0.1.0"
description = "Business co-founder / executive assistant MCP server"
readme = "README.md"
authors = [
    { name = "Varun Bhadurgatte Nagaraj", email = "varunnagaraj2009@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastmcp>=2.14.2",
    "google-api-python-client>=2.167.0",
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.27.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[project.scripts]
aios-cofounder-mcp = "aios_cofounder_mcp.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
